<resources>
    <string name="app_name">Quehaceres</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username or Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_register">Register</string>
    <string name="action_register_short">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
    completions."
  </string>
    <string name="title_activity_main">Quehaceres</string>
    <string name="title_activity_login">Login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_notifications">Notificaciones</string>
    <string name="action_invite">Invitar personas</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="tab_available">DISPONIBLES</string>
    <string name="tab_my_tasks">MIS TAREAS</string>
    <string name="tab_group">GRUPO</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_change_member">CAMBIAR</string>
    <string name="member_points_qty">Tiene asignados</string>
    <string name="points">puntos</string>
    <string name="costs">Cuesta $</string>
    <string name="drawer_home_option">Home</string>
    <string name="drawer_profile">My Profile</string>
    <string name="drawer_logout">Logout</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_social">Social</string>
    <string name="drawer_share">Share</string>


</resources>
