<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
    <item
      android:id="@+id/nav_home"
      android:icon="@drawable/ic_menu_home"
      android:title="@string/drawer_home_option" />
    <item
      android:id="@+id/nav_profile"
      android:icon="@drawable/ic_menu_person"
      android:title="@string/drawer_profile" />
    <item
      android:id="@+id/nav_settings"
      android:icon="@drawable/ic_menu_settings"
      android:title="@string/drawer_settings" />
      <item
      android:id="@+id/nav_logout"
      android:icon="@drawable/ic_menu_logout"
      android:title="@string/drawer_logout" />
  </group>

  <item android:title="@string/drawer_social">
    <menu>
      <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/drawer_share" />
    </menu>
  </item>

</menu>
